Update dependencies and plugins (#14309)